Fix JDK8 compatibility: replace List.of with Collections.singletonList